# monetdb-bbp-reader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/src/: monetdb-bp-reader.cpp
examples/src/util/: dump.cpp  dump.h
scripts/: get-includes  get-undefined-refs  get_header_defines  get_used_defines
src/: gdk_version_selection.h.in
src/examples/: simple.cpp
src/monetdb-buffer-pool/: CMakeCache.txt  atoms_snippet.h  buffer_pool.cpp  buffer_pool.h  buffer_pool_lock.hpp  column_name.h  column_proxy.cpp  column_proxy.h  gdk_snippet.h  gdk_wrapper.h
src/monetdb-buffer-pool/from-monetdb-sources/: monetdb_config.h.in
src/monetdb-buffer-pool/from-monetdb-sources/v061033/gdk/: gdk.h  gdk_atoms.c  gdk_bat.c  gdk_bbp.c  gdk_bbp.h  gdk_hash.c  gdk_heap.c  gdk_posix.c  gdk_posix.h  gdk_private.h  gdk_storage.c  gdk_system.h  gdk_utils.c  gdk_utils.h
src/monetdb-buffer-pool/from-monetdb-sources/v061033/monetdb5/modules/atoms/: mtime.c  mtime.h
src/monetdb-buffer-pool/from-monetdb-sources/v061037/gdk/: gdk.h  gdk_atoms.c  gdk_bat.c  gdk_bbp.c  gdk_bbp.h  gdk_hash.c  gdk_heap.c  gdk_posix.c  gdk_posix.h  gdk_private.h  gdk_storage.c  gdk_utils.c  gdk_utils.h
src/monetdb-buffer-pool/from-monetdb-sources/v061037/monetdb5/modules/atoms/: mtime.c  mtime.h
src/monetdb-buffer-pool/from-monetdb-sources/v061040/gdk/: gdk.h  gdk_atoms.c  gdk_bat.c  gdk_bbp.c  gdk_bbp.h  gdk_hash.c  gdk_heap.c  gdk_posix.c  gdk_posix.h  gdk_private.h  gdk_storage.c  gdk_system.h  gdk_utils.c  gdk_utils.h
src/monetdb-buffer-pool/from-monetdb-sources/v061040/monetdb5/modules/atoms/: mtime.c  mtime.h
src/monetdb-buffer-pool/from-monetdb-sources/v061041/gdk/: gdk.h  gdk_atoms.c  gdk_bat.c  gdk_bbp.c  gdk_bbp.h  gdk_hash.c  gdk_heap.c  gdk_posix.c  gdk_posix.h  gdk_private.h  gdk_storage.c  gdk_string.c  gdk_system.h  gdk_utils.c  gdk_utils.h
src/monetdb-buffer-pool/from-monetdb-sources/v061041/monetdb5/modules/atoms/: mtime.c  mtime.h
src/util/: builtins.hpp  files.cpp  files.h  macro.h  math.hpp  optional.hpp  poor_mans_reflection.h  prettyprint.hpp  repeat_tuple.h.bkp  string.cpp  string.hpp  string_view.hpp  traits.h  type_name.hpp
